fix: logo jump on mobile browser UI collapse

--- a/app/components/HomeSplash/HomeSplash.module.css
+++ b/app/components/HomeSplash/HomeSplash.module.css
@@ -5,8 +5,12 @@
   .overlay {
     position: fixed;
     left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    bottom: 50%;
+    transform: translate(-50%, 50%);
+    width: 70%;
+    @media screen and (min-width: 768px) {
+      width: auto;
+    }
     .logo {
       img {
         width: 100%;
